<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.edu.ifsuldeminas.mch.applivro.FormActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="@string/title_activity_form"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/margin_to_action_bar"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/book_title"
            android:minHeight="@dimen/edit_texts_height" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/margin_to_action_bar"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/book_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/book_author"
            android:minHeight="@dimen/edit_texts_height" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/margin_to_action_bar"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/book_pages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/book_pages"
            android:minHeight="@dimen/edit_texts_height" />
    </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/margin_to_action_bar"
            android:layout_marginRight="@dimen/activity_horizontal_margin">

            <RadioButton
                android:id="@+id/radio_lendo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_lendo"
                android:tag="Lendo"/>

            <RadioButton
                android:id="@+id/radio_lido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_lido"
                android:tag="Lido"/>

            <RadioButton
                android:id="@+id/radio_quero_ler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_quero_ler"
                android:tag="Quero ler"/>
        </RadioGroup>



</LinearLayout>
